# NewResearchBot

./: README.md  app.py  cli.py  pyproject.toml  requirements.txt  research_log.json
research_bot/: __init__.py  agent.py  research_log.py  tools.py
